# yasli-scraper

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md
schemas/: README.md  snapshot.v1.schema.json  snapshot.v2.schema.json
schemas/examples/: varna-stub.json
src/yasli_scraper/: __main__.py  http.py  models.py  parser.py  pipeline.py  r2.py  snapshot.py  source.py  source_jasla.py
src/yasli_scraper/tools/: gen_schema.py
tests/: conftest.py  test_cli.py  test_http.py  test_models.py  test_parser.py  test_pipeline.py  test_r2.py  test_run_e2e.py  test_schema_artifact.py  test_snapshot.py  test_source.py  test_source_jasla.py
tests/fixtures/: README.md  __init__.py  garden_34.html  infant_39.html  kg_with_address.html  pg_10.html  pg_with_address.html
