[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yasli-scraper"
version = "0.1.0"
description = "Scraper that produces canonical JSON snapshots of Bulgarian municipal services to Cloudflare R2."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "boto3>=1.34",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "moto[s3]>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
